--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,9 @@
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
 * text=auto
+*.cs linguist-detectable=false
+*.c linguist-detectable=false
+
 
 ###############################################################################
 # Set default behavior for command prompt diff.
