--- a/.gitattributes
+++ b/.gitattributes
@@ -4,7 +4,8 @@
 * text=auto
 *.cs linguist-detectable=false
 *.c linguist-detectable=false
-
+*.sh linguist-detectable=false
+*.h linguist-detectable=false # sorry
 
 ###############################################################################
 # Set default behavior for command prompt diff.
