--- a/src/obnoxious.vcxproj
+++ b/src/obnoxious.vcxproj
@@ -293,8 +293,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(DXSDK_DIR)Include;$(ProjectDir)Json;$(ProjectDir)protobuf\src;$(ProjectDir)SFML\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(DXSDK_DIR)Lib\x86;$(ProjectDir)protobuf;$(ProjectDir)X1API;$(ProjectDir)SFML\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;$(DXSDK_DIR)Include;$(ProjectDir)Json;$(ProjectDir)protobuf\src;$(ProjectDir)SFML\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x86;$(DXSDK_DIR)Lib\x86;$(ProjectDir)protobuf;$(ProjectDir)X1API;$(ProjectDir)SFML\lib;$(LibraryPath)</LibraryPath>
     <TargetName>debug</TargetName>
     <OutDir>$(SolutionDir)build\debug</OutDir>
     <IntDir>$(SolutionDir)\intermediates\debug</IntDir>
@@ -302,7 +302,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;$(DXSDK_DIR)SFML\Include;$(DXSDK_DIR)Include;$(ProjectDir)Json;$(ProjectDir)protobuf\src;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib;$(DXSDK_DIR)SFML\lib;$(DXSDK_DIR)Lib\x86;$(ProjectDir)protobuf;$(ProjectDir)api;$(LibraryPath)</LibraryPath>
+    <LibraryPath>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x86;$(DXSDK_DIR)SFML\lib;$(DXSDK_DIR)Lib\x86;$(ProjectDir)protobuf;$(ProjectDir)api;$(LibraryPath)</LibraryPath>
     <TargetName>release</TargetName>
     <OutDir>$(SolutionDir)build\release</OutDir>
     <IntDir>$(SolutionDir)\intermediates\release</IntDir>
