--- a/src/obnoxious.vcxproj
+++ b/src/obnoxious.vcxproj
@@ -85,6 +85,7 @@
     <ClInclude Include="Engine\SDK\CUtlMemory.h" />
     <ClInclude Include="Engine\SDK\CUtlVector.h" />
     <ClInclude Include="Engine\SDK\Cvar.h" />
+    <ClInclude Include="engine\sdk\IKeyValuesSystem.h" />
     <ClInclude Include="Engine\SDK\IMaterialVar.h" />
     <ClInclude Include="Engine\Utils\Utils.h" />
     <ClInclude Include="Engine\Engine.h" />
@@ -318,8 +319,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <Optimization>Disabled</Optimization>
       <WholeProgramOptimization>false</WholeProgramOptimization>
-      <LanguageStandard>
-      </LanguageStandard>
+      <LanguageStandard>Default</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <InlineFunctionExpansion>Default</InlineFunctionExpansion>
       <IntrinsicFunctions>false</IntrinsicFunctions>
